Thu May 19 08:58:48 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/INET_Addr.cpp:
	* ace/INET_Addr.inl:

	  Moved remaining virtual methods out of line.  See "Wed May 18
	  16:19:32 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>" for
	  details.

Thu May 19 15:21:00 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * bin/MakeProjectCreator/config/taoidl3toidl2defaults.mpb:

          Added line

          after += TAO_IDL3_TO_IDL2_EXE

          to the config file to make sure that the executable is built
          before being used in a test, example or application. Thanks to
          Chad Elliott <elliott_c@ociweb.com> for suggesting the change.

Thu May 19 14:05:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * netsvcs/clients/Logger/indirect_logging.cpp:
        * netsvcs/lib/Client_Logging_Handler.cpp:
          When we can't open the logger print out an error and exit with -1.

Thu May 19 00:38:46 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* config-g++-common.h:
	* config-lite.h:

	  Removed ACE_EXPORT_SINGLETON_{DECLARATION,DECLARE} macro
	  definitions.  They do not provide the expected behavior in g++
	  4.0 configurations, as they do in VC++ configurations.

Wed May 18 16:19:32 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/ATM_Addr.cpp:
	* ace/ATM_Addr.inl:
	* ace/DEV_Addr.cpp:
	* ace/DEV_Addr.inl:
	* ace/FILE_Addr.cpp:
	* ace/FILE_Addr.inl:
	* ace/INET_Addr.cpp:
	* ace/INET_Addr.inl:
	* ace/MEM_Addr.cpp:
	* ace/MEM_Addr.inl:
	* ace/SPIPE_Addr.cpp:
	* ace/SPIPE_Addr.inl:
	* ace/Service_Types.cpp:
	* ace/Service_Types.inl:
	* ace/UNIX_Addr.cpp:
	* ace/UNIX_Addr.inl:

	  Moved virtual method implementation out-of-line.  Since the
	  classes to which they belong are exported, inlining them will
	  cause problems when attempting to perform a dynamic_cast<> in
	  binaries built with g++ 4.0's -fvisibility-inlines-hidden
	  command line option.

	* ace/Strategies_T.cpp (dump):
